fixed search bar alignment and responsiveness

--- a/public/style.css
+++ b/public/style.css
@@ -77,13 +77,17 @@ body {
   padding: 20px;
   box-sizing: border-box;
 }
+#uv-form {
+    display: flex;
+}
 
 .search-container {
   position: relative;
+  width: min(50rem, 80%);
 }
 
 .search-input {
-  width: 400px;
+  width: 100%;
   height: 35px;
   padding: 10px 20px;
   border: none;
